--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 body {
-  @apply bg-bg text-c-black-100 font-mont dark:bg-c-black-100 dark:text-bg px-7 antialiased;
+  @apply bg-bg text-white font-mont px-7 antialiased;
 }
 
 .content {
-  @apply flex gap-4;
+  @apply flex gap-4 pt-5;
 }
