--- a/frontend/src/app/(components)/Sidebar/styles.module.css
+++ b/frontend/src/app/(components)/Sidebar/styles.module.css
@@ -1,3 +1,12 @@
 .container {
-  @apply bg-white rounded-xl shadow-md w-max px-5 py-4 flex flex-col gap-2;
+  @apply border-2 border-primary-70 rounded-xl shadow-md w-max px-5 py-4 flex flex-col gap-2;
+}
+
+.item {
+  @apply flex flex-col gap-2;
+
+  &Link {
+    @apply block py-2.5 pl-4 rounded-xl text-sm transition-colors text-white
+    hover:bg-primary-50 hover:text-black;
+  }
 }
