--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 body {
-  @apply bg-bg text-white font-mont px-7 antialiased;
+    @apply bg-bg text-white font-mont px-7 antialiased;
+}
+
+main {
+    @apply flex gap-4 pt-5 items-start;
 }
 
 .content {
-  @apply flex gap-4 pt-5;
+    @apply w-full min-h-screen;
 }
